--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "nanoid": "^3.3.11"
   },
   "devDependencies": {
-    "eslint": "^9.29.0"
+    "@eslint/js": "^9.29.0",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0"
   }
 }
